cloud-infra-macros/tests/fails/zipfile_not_found.stderr
error: proc macro panicked
 --> tests/fails/zipfile_not_found.rs:4:16
  |
4 |     let file = zipfile!("nonexistent.zip");
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: did not find file nonexistent.zip
